# ag-ui-langgraph-app

./: .env.example  .gitignore  README.md  package-lock.json  package.json
ag-ui-langgraph-agent/: .env.example  .gitignore  README.md  pyproject.toml
ag-ui-langgraph-agent/src/agui/: main.py
ag-ui-langgraph-agent/src/agui/langgraph/: agent.py  report.py  research.py  search.py  state.py
src/app/api/copilotkit/: route.ts
src/app/copilotkit/: page.tsx
src/components/: Progress.tsx  ReportCanvas.tsx
